--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
+                        <li><a href="https://github.com/gopalKrishna1109"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/gopal-krishna-v-455748237"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
