--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Tableau</span> <span class="pull-right">80%</span>
+                    <span>TABLEAU</span> <span class="pull-right">80%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -226,7 +226,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Gallery (Only using HTML and Vanilla CSS)</h2>
+                    <h2 class="w-title">Gallery (Only using HTML and Vanilla CSS) *in progress</h2>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
