New responsive spotify clone using HTML/CSS added to projects

--- a/index.html
+++ b/index.html
@@ -226,7 +226,25 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Gallery (Only using HTML and Vanilla CSS) *in progress</h2>
+                    <h2 class="w-title">Spotify Clone (HTML/CSS)</h2>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./projects/Spotify/index.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Gallery (HTML/CSS)</h2>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
