Added new features

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Gopal Krishna V</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Software Engineer, Cloud Native, Cyber Savvy, Data Wizard, Cricketer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Salesforce Engineer, , Cricketer on the weekend"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -73,13 +73,21 @@
             <h3 class="title-a">Summary</h3>
             <div class="line-mf"></div>
             <p class="lead">
-              <br>Hello! I'm Gopal Krishna Venkateshwaralu, a 25-year-old software enthusiast from Bangalore, India. I'm an outgoing and energetic individual with a passion for sports, nature, and contributing to society. <br><br>
+              <br>Hello! I'm Gopal Krishna Venkateshwaralu, a Salesforce Engineer based in Boston, MA.<br><br>
 
-              My professional journey began shortly after graduating in 2021, when I joined TCS, Bangalore.  I worked on the Salesforce platform for Eli Lilly, a US-based pharmaceutical company. My daily responsibilities included participating in Agile ceremonies like sprint discussions and planning, and most importantly, resolving incident tickets. I interacted directly with customers, diligently tackling their complex issues. My deep understanding of the system allowed me to efficiently solve these challenges, always adhering to HIPAA/GDPR and other industry standards. I consistently exceeded expectations in incident resolution, often outperforming even developers and testers.  Beyond incident management, I also communicated with clients, gathered their requirements, and translated them into well-defined user stories for the development team.<br><br>
-              
-              I left TCS in August 2022 to pursue a Master's degree at Clark University. While I had to postpone my studies for a year due to personal reasons, I made the most of my time. I dedicated 12 months to intensive coding practice and learning at JSpiders, a Training and Development center.  There, I immersed myself in web technologies, the MERN stack, and SQL, achieving certification upon successful completion of the program before arriving in the US in August 2023.<br><br>
-              
-              I'm now well-equipped with skills across various domains, including Software Engineering, Data Engineering/Analysis, and Cybersecurity. I'm eager to connect with recruiters and discuss potential opportunities. Please feel free to reach out. I'm always open to new challenges and collaborations!
+I'm a certified Salesforce Platform Administrator and Platform Developer I with over 4 years of hands-on experience building HIPAA-compliant solutions in healthcare and life sciences. My core expertise lies in Salesforce Health Cloud, Service Cloud, Apex, Lightning Web Components (LWC), Flows, and sophisticated API integrations that enable real-time patient enrollment, CRM automation, and secure cross-system data exchange.<br><br>
+
+Most recently, at UnitedHealth Group, I design and implement REST API–driven integrations that connect multiple healthcare organizations, automate end-to-end patient enrollment processes, and reduce manual data entry and enrollment errors by over 60%. I specialize in scalable data mappings, duplicate management, validation rules, and bi-directional near-real-time synchronization—all built with strict adherence to HIPAA and enterprise-grade security standards.<br><br>
+
+Previously, at Tata Consultancy Services (supporting Eli Lilly), I delivered end-to-end Salesforce platforms serving 5,000+ users. I developed Agent-style orchestration using Apex and Flows, integrated Salesforce with Veeva CRM, implemented robust security models, and drove major improvements in resolution time, data quality, and release stability through CI/CD pipelines and Agile practices.<br><br>
+
+Beyond Salesforce, I have a strong interest working with Data, and modern frontend technologies. During my early career and graduate studies, I built several full-stack and data-focused projects to deepen these skills. Most recently, I developed a Conflict Risk Early Warning Dashboard application using Streamlit, showcasing my ability to turn complex data into actionable, interactive insights.<br><br>
+
+You can explore all my projects in the Portfolio/Projects section below.<br><br>
+
+I hold a Master of Science in Information Technology from Clark University (GPA 3.97) and thrive in collaborative environments where technology drives meaningful impact, whether in healthcare operations, data-driven decision-making, or user-centric applications.<br><br>
+
+I'm passionate about solving real-world problems through reliable, scalable, and innovative solutions. I’m always excited to connect with like-minded professionals, recruiters, and organizations working on challenging problems in healthcare, data, or technology. Feel free to reach out—I’d love to discuss potential opportunities and collaborations!
             </p>
           </div>   
         </div>
@@ -104,8 +112,8 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Gopal Krishna Venkateshwaralu</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Software Engineer</span></p>
-                        <p><span class="title-s">Email: </span> <span>krishnav.gopal1109@gmail.com</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Salesforce Engineer</span></p>
+                        <p><span class="title-s">Email: </span> <span>gopalkv911@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>+1 7745197105</span></p>
                       </div>
                     </div>
@@ -155,9 +163,10 @@
                     </div>
                     <div class="title-box-2"></div>
                       <h3>
-                        Masters in Information Technology
+                        Master of Science
                       </h3>
                       <p class="lead">
+                        Information Technology
                         <br>GPA/Percentage : <b>3.97</b>
                       </p>
                       <p class="lead">
@@ -169,7 +178,7 @@
                       </h3>
                       <p class="lead">
                         Mechatronics Engineering
-                        <br>CGPA/Percentage : <b>7.08</b> / <b>63.30%</b>
+                        <br>GPA/Percentage : <b>3.27</b>
                       </p>
                       <p class="lead">
                           Acharya Institute of Technology, Bengaluru <br> 
@@ -195,9 +204,6 @@
               <h3 class="title-a">
                 Projects
               </h3>
-              <p class="subtitle-a">
-                Projects created using HTML, CSS and JAVASCRIPT
-              </p>
               <div class="line-mf"></div>
             </div>
           </div>
@@ -210,11 +216,47 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
+                    <h2 class="w-title">Conflict-Risk-Early-Warning</h2>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://conflict-risk-early-warning.streamlit.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
                     <h2 class="w-title">Spotify Clone (HTML/CSS)</h2>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="./projects/Spotify/index.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Simon Says</h2>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="./projects/simon_says/index.html" target="_blank"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
